--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,24 @@
       content="Shoreline extraction via generative adversarial networks, prediction via LSTMs"
     />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxcedr1zrD8h225vpj3hNseos5mHGEDVY&libraries=drawing,geometry"></script>
+    <script type="text/javascript">
+      (function (l) {
+        if (l.search[1] === "/") {
+          var decoded = l.search
+            .slice(1)
+            .split("&")
+            .map(function (s) {
+              return s.replace(/~and~/g, "&");
+            })
+            .join("?");
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      })(window.location);
+    </script>
     <title>Shoreline Extraction SP</title>
   </head>
   <body>
